Closed Bug 436207 Opened 17 years ago Closed 17 years ago

Display error when install fails due to missing install.rdf

Categories

(Toolkit :: Add-ons Manager, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9.1a1

People

(Reporter: tchung, Assigned: mossop)

References

()

Details

(Keywords: verified1.9.0.2)

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008052804 Minefield/3.0pre Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008052804 Minefield/3.0pre There are still invalid extensions that are giving the appearance that they are getting installed in firefox 3. They shouldnt, cause this is an plugin xpi example of the old ways to install plugins in Fx2. See screenshot Reproducible: Always Steps to Reproduce: 1. Install RC1, Go to url 2. allow site to the list 3. click download button, and install 4. Verify plugin seems to install via Addons Manager, but nothing appears on the dialog window. Actual Results: invalid extension gives impression it is installed Expected Results: Its not installed.
Version: unspecified → 3.0 Branch
Flags: blocking1.9.0.1?
Flags: blocking-firefox3?
Not blocking Firefox 3 on this, but we might need to relnote it. Tony: anything in the error console?
Flags: blocking-firefox3? → blocking-firefox3-
no errors thrown. I did talk to dave about it earlier, and he had some concerns. Nom'ing for 3.0.1 would make more sense for this bugfix.
The issue is with xpis that do not contain an install.rdf (old style with install.js). For some reason we are no longer flagging an error to the user that the install could not proceed.
Assignee: nobody → dtownsend
Summary: Disallow installation invalid extensions for Firefox 3 → Disallow installation of extensions that are invalid due to using install.js and not install.rdf
Flags: wanted1.9.0.x?
Flags: blocking1.9.0.1?
Flags: blocking1.9.0.1-
Summary: Disallow installation of extensions that are invalid due to using install.js and not install.rdf → Display error when install fails due to missing install.rdf
Attached patch patch rev 1 (obsolete) — Splinter Review
This adds back the check for install.rdf to xpinstall and sends the appropriate error if it doesn't exist. Simple unit test included calls xpinstall to install an item with only install.js and checks the install status is right.
Attachment #327388 - Flags: review?(dveditz)
Status: NEW → ASSIGNED
Comment on attachment 327388 [details] [diff] [review] patch rev 1 I'd prefer moving this with the other checks in "OpenAndValidateArchive()", seems a little cleaner and we only support this one form of install now. But if you have a reason for doing this check here then it looks good to me.
Attached patch patch rev 2Splinter Review
That makes more sense yeah
Attachment #327388 - Attachment is obsolete: true
Attachment #327955 - Flags: review?(dveditz)
Attachment #327388 - Flags: review?(dveditz)
Comment on attachment 327955 [details] [diff] [review] patch rev 2 r/sr=dveditz
Attachment #327955 - Flags: superreview+
Attachment #327955 - Flags: review?(dveditz)
Attachment #327955 - Flags: review+
Landed in changeset f795b4346cec. Will look for branch approval in a few days.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Comment on attachment 327955 [details] [diff] [review] patch rev 2 Requesting approval. This fixes a confusing UI issue for faulty or deprecated add-on types, includes tests to verify that xpinstall returns the same errors as it did in Firefox 2.
Attachment #327955 - Flags: approval1.9.0.2?
Dave, is this fallout from bug 406807?
(In reply to comment #11) > Dave, is this fallout from bug 406807? Yes that's right.
Target Milestone: --- → Firefox 3.1a1
Comment on attachment 327955 [details] [diff] [review] patch rev 2 Approved for 1.9.0.2. Please land in CVS. a=ss
Attachment #327955 - Flags: approval1.9.0.2? → approval1.9.0.2+
Version: 3.0 Branch → Trunk
RCS file: /cvsroot/mozilla/toolkit/mozapps/extensions/test/unit/test_bug436207.js,v done Checking in toolkit/mozapps/extensions/test/unit/test_bug436207.js; /cvsroot/mozilla/toolkit/mozapps/extensions/test/unit/test_bug436207.js,v <-- test_bug436207.js initial revision: 1.1 done RCS file: /cvsroot/mozilla/toolkit/mozapps/extensions/test/unit/addons/test_bug436207/install.js,v done Checking in toolkit/mozapps/extensions/test/unit/addons/test_bug436207/install.js; /cvsroot/mozilla/toolkit/mozapps/extensions/test/unit/addons/test_bug436207/install.js,v <-- install.js initial revision: 1.1 done Checking in xpinstall/src/nsXPInstallManager.cpp; /cvsroot/mozilla/xpinstall/src/nsXPInstallManager.cpp,v <-- nsXPInstallManager.cpp new revision: 1.165; previous revision: 1.164 done
Keywords: fixed1.9.0.2
Product: Firefox → Toolkit
Flags: wanted1.9.0.x? → wanted1.9.0.x+
Verified fix on Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.2pre) Gecko/2008081904 GranParadiso/3.0.2pre. The error message is generated as expected.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: