Bug 436207: Display error when install fails due to missing install.rdf. r+sr=dveditz