toolkit/mozapps/extensions/test/unit/addons/test_bug436207/install.js
@@ -1,0 +1,1 @@
+// Test add-on that attempts to use install.js to install.
